add by awen 1,薪资标准修改